--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,6 +1,6 @@
 name: Java CI with Gradle
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   build:
@@ -20,3 +20,7 @@ jobs:
         run: java -jar ./artifacts/app-deadline.jar &
       - name: Build with Gradle
         run: ./gradlew test --info -Dselenide.headless=true
+      - name: Container start
+        run: docker-compose up &
+      - name: Waiting for сontainer start
+        run: sleep 30
