--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2.311
+      - uses: actions/checkout@latest
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
