--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@latest
+      - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
@@ -16,10 +16,10 @@ jobs:
           distribution: 'adopt'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Start SUT
-        run: java -jar ./artifacts/app-deadline.jar &
       - name: Container start
         run: docker-compose up
+      - name: Start SUT
+        run: java -jar ./artifacts/app-deadline.jar &
       - name: Waiting for Сontainer start
         run: sleep 30
       - name: Build with Gradle
