--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Container start
-        run: docker-compose up
+        run: docker-compose up &
       - name: Start SUT
         run: java -jar ./artifacts/app-deadline.jar &
       - name: Waiting for Сontainer start
